--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Srishti's Feto World</title>
   </head>
 
@@ -35,5 +35,5 @@
     </header>
   </body>
 
-  <script src="/scripts.js"></script>
+  <script src="scripts.js"></script>
 </html>
