--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="logo.png"/>
     <title>Srishti's Feto World</title>
   </head>
 
   <body>
     <header class="header">
       <nav class="navbar">
-        <a href="#" class="nav-logo">Srishti's Feto World</a>
-        <ul class="nav-menu">
+        <div class="logo-class">
+        <span><a href="#" class="nav-logo"><img id="logo-img" src="logo.png"></a></span>
+          <span id="company-name">Srishti's Feto World<br>Scan Center</span>
+        </div>
+          <ul class="nav-menu">
           <li class="nav-item">
             <a href="#" class="nav-link">Home</a>
           </li>
@@ -33,6 +37,16 @@
         </div>
       </nav>
     </header>
+    <div class="fold-content">
+      <div class="fold-child" id="fold-content-text">
+        Maternal & Fetal Medicine Clinic
+      </div>
+      <div class="fold-child">
+        <img id="fold-content-image" src="logo.png">
+      </div>
+    </div>
+    
+  </div>
   </body>
 
   <script src="scripts.js"></script>
