--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="logo.png"/>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/png" href="./logo.png"/>
     <title>Srishti's Feto World</title>
   </head>
 
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo-class">
-        <span><a href="#" class="nav-logo"><img id="logo-img" src="logo.png"></a></span>
+        <span><a href="#" class="nav-logo"><img id="logo-img" src="./logo.png"></a></span>
           <span id="company-name">Srishti's Feto World<br>Scan Center</span>
         </div>
           <ul class="nav-menu">
@@ -42,7 +42,7 @@
         Maternal & Fetal Medicine Clinic
       </div>
       <div class="fold-child">
-        <img id="fold-content-image" src="logo.png">
+        <img id="fold-content-image" src="./logo.png">
       </div>
     </div>
     
