feat: fold content for mobile

--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
     </header>
     <div class="fold-content">
       <div class="fold-child" id="fold-content-text">
-        Maternal & Fetal Medicine Clinic
+        <p id="fold-content-text-p-heading">Maternal & Fetal Medicine Clinic</p>
+        <p id="fold-content-text-p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus ipsum semper, sit amet luctus turpis consectetur aliquet porttitor.</p>
       </div>
-      <div class="fold-child">
-        <img id="fold-content-image" src="./logo.png">
+      <div class="fold-child" id="fold-content-image">
+        <img src="./fold-pic-min.jpg">
+      </div>
+      <div class="fold-child" id="fold-content-scroll">
+        <img src="./arrow-down.gif">
       </div>
     </div>
     
