fix: desktop & mobile compatible

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
       <div class="fold-child" id="fold-content-text">
         <p id="fold-content-text-p-heading">Maternal & Fetal Medicine Clinic</p>
         <p id="fold-content-text-p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus ipsum semper, sit amet luctus turpis consectetur aliquet porttitor.</p>
+        <button class="contact-button" role="button">Contact</button>
       </div>
       <div class="fold-child" id="fold-content-image">
         <img src="./fold-pic-min.jpg">
-      </div>
-      <div class="fold-child" id="fold-content-scroll">
-        <img src="./arrow-down.gif">
       </div>
     </div>
     
