feat: specializations in mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Services</a>
+            <a href="#below-fold-specialization" class="nav-link">Specializations</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">About</a>
@@ -47,7 +47,19 @@
         <img src="./fold-pic-min.jpg">
       </div>
     </div>
-    
+    <div id="below-fold-specialization">
+      <p id="below-fold-specialization-heading">Specializations</p>
+      <p id="below-fold-specialization-text">
+        <ul id="below-fold-specialization-text-ul">
+          <li class="below-fold-specialization-text-ul-li"><span>NT Scan</span></li>
+          <li class="below-fold-specialization-text-ul-li"><span>Anomaly Scan</span></li>
+          <li class="below-fold-specialization-text-ul-li"><span>Fetal Echocardiography</span></li>
+          <li class="below-fold-specialization-text-ul-li"><span>Fetal Doppler Studying</span></li>
+          <li class="below-fold-specialization-text-ul-li"><span>Multiple Pregnancy</span></li>
+          <li class="below-fold-specialization-text-ul-li"><span>3D & 4D Scan</span></li>
+        </ul>
+      </p>
+    </div>
   </div>
   </body>
 
