feat: mobile specializations

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="fold-content">
       <div class="fold-child" id="fold-content-text">
         <p id="fold-content-text-p-heading">Maternal & Fetal Medicine Clinic</p>
-        <p id="fold-content-text-p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper neque dapibus ipsum semper, sit amet luctus turpis consectetur aliquet porttitor.</p>
+        <p id="fold-content-text-p-content">Nestled in the heart of the city, our center is dedicated to providing expectant mothers and their unborn babies with the highest level of care and expertise.</p>
         <button class="contact-button" role="button">Contact</button>
       </div>
       <div class="fold-child" id="fold-content-image">
