--- a/blue/index.html
+++ b/blue/index.html
@@ -24,10 +24,7 @@
             <a href="#below-fold-specialization" class="nav-link">Specializations</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Consultation</a>
           </li>
         </ul>
         <div class="hamburger">
@@ -76,6 +73,51 @@
         </div>
       </div>
     </div>
+
+
+    <div id="below-fold-consultation">
+      <p id="below-fold-consultation-heading">Consultation</p>
+      <div id="below-fold-consultation-text">
+        <div class="below-fold-consultation-div" id="left_consultation_tile">
+          <div class="consultation-heading">Doctor Timings</div>
+          <div class="consultation-content">
+            <li class="timings_list" id="mon_sat_timings_id">
+              <div>Mon - Sat</div>
+              <div>4:30 PM to 8:30 PM</div>
+            </li>
+            <li class="timings_list" id="sun_timings_id">
+              <div>Sun</div>
+              <div>10:00 AM to 2:00 PM</div>
+            </li>
+          </div>
+        </div>
+        <div class="below-fold-consultation-div" id="middle_consultation_tile">
+          <div class="consultation-heading">Consultant</div>
+          <div class="consultation-content" id="consultant_tile">
+            <li class="consultation_list" id="consultant_name_id">
+              <div>Dr. Kavita Mantri</div>
+            </li>
+            <li class="consultation_list" id="consultant_info_id">
+              <div>Fetal Medicine, Mediscan</div>
+            </li>
+          </div>
+        </div>
+        <div class="below-fold-consultation-div" id="right_consultation_tile">
+          <div class="consultation-heading">Contact</div>
+          <div class="consultation-content">
+          <li class="contact_list" id="phone_id">
+            <div>&#9742;</div>
+            <div>+91 - 7010993636</div>
+          </li>
+          <li class="contact_list" id="email_id">
+            <div>&#9993;</div>
+            <div>srishtisfetoworld@gmail.com</div>
+          </li>
+        </div>
+        </div>
+      </div>
+    </div>
+    
   </div>
   </body>
 
