--- a/red/index.html
+++ b/red/index.html
@@ -24,7 +24,7 @@
             <a href="#below-fold-specialization" class="nav-link">Specializations</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Consultation</a>
+            <a href="#below-fold-consultation" class="nav-link">Consultation</a>
           </li>
 
         </ul>
