--- a/blue/index.html
+++ b/blue/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo-class">
-        <span><a href="#" class="nav-logo"><img id="logo-img" src="./images/logo.png"></a></span>
+        <span><a href="#" class="nav-logo"><img id="logo-img" loading="lazy" src="./images/logo.png"></a></span>
           <span id="company-name">Srishti's Feto World<br>Scan Center</span>
         </div>
           <ul class="nav-menu">
