fix: contact button enable functionality

--- a/blue/index.html
+++ b/blue/index.html
@@ -38,7 +38,7 @@
       <div class="fold-child" id="fold-content-text">
         <p id="fold-content-text-p-heading">Maternal & Fetal Medicine Clinic</p>
         <p id="fold-content-text-p-content">Nestled in the heart of the city, our center is dedicated to providing expectant mothers and their unborn babies with the highest level of care and expertise.</p>
-        <button class="contact-button" role="button">Contact</button>
+        <button class="contact-button" role="button" type="button" onclick="location.href='#below-fold-consultation'">Contact</button>
       </div>
       <div class="fold-child" id="fold-content-image">
         <img src="./images/fold-pic-min.jpg">
