feat: update look & feel for burger menu

--- a/blue/index.html
+++ b/blue/index.html
@@ -17,13 +17,13 @@
           <span id="company-name">Srishti's Feto World<br>Scan Center</span>
         </div>
           <ul class="nav-menu">
-          <li class="nav-item">
+          <li class="nav-item" id="burger_home">
             <a href="#" class="nav-link">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="burger_specialization">
             <a href="#below-fold-specialization" class="nav-link">Specializations</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="burger_consultation">
             <a href="#below-fold-consultation" class="nav-link">Consultation</a>
           </li>
         </ul>
